# phased_array

./: .gitignore  Cargo.toml  G9.62.ifile  README.md
reference/gico3-2.7.5/src/: #GICO.c#  #read.c#  .#read.c  ._GICO3.c  Doxyfile  GICO.c  GICO.h  GICO3.c  GICO3.h  GICO3_update20150316.c  Makefile  Makefile.am  Makefile.in  apri.c  apri.h  common.h  config.h  cross.h  gico3  header.h  main.c  mt19937ar.c  param.c  param.h  read.2015jun17.c  read.4elecsdata2015jul21.c  read.almostOK.c  read.c  read.c.backup  read.h  read.ng.c  schedule.c  schedule.h  tool.c  tool.h
reference/gico3-2.7.5/src/.deps/: gico3-GICO.Po  gico3-GICO3.Po  gico3-apri.Po  gico3-main.Po  gico3-mt19937ar.Po  gico3-param.Po  gico3-read.Po  gico3-schedule.Po  gico3-tool.Po
reference/gico3-2.7.5/src/html/: ._index.html  ._structStation.html  GICO3_8c.html  GICO3_8c_source.html  GICO3_8h.html  GICO3_8h_source.html  GICO_8c.html  GICO_8c_source.html  GICO_8h.html  GICO_8h_source.html  annotated.html  apri_8c.html  apri_8c_source.html  apri_8h.html  apri_8h_source.html  classes.html  common_8h.html  common_8h_source.html  config_8h.html  config_8h_source.html  cross_8h.html  cross_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_eval.html  globals_func.html  globals_vars.html  header_8h.html  header_8h_source.html  index.html  main_8c.html  main_8c_source.html  mt19937ar_8c.html  mt19937ar_8c_source.html  param_8c.html  param_8c_source.html  param_8h.html  (+41 more)
reference/gico3-2.7.5/src/latex/: GICO3_8c.tex  GICO3_8h.tex  GICO_8c.tex  GICO_8h.tex  (+34 more)
(+119 files in other folders)
